Implementing the Adding of the code coverage, get from GitHub and summary